[gd_scene format=3 uid="uid://cmkyx6yqg3w5u"]

[ext_resource type="Script" uid="uid://cijlsaydrrewx" path="res://scenes/ProfileSelect.gd" id="1_profile"]

[node name="ProfileSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_profile")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.1, 0.12, 0.18, 0.85)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainPanel" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30
alignment = 1

[node name="TitleLabel" type="Label" parent="CenterContainer/MainPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "S√âLECTION DU PROFIL"
horizontal_alignment = 1

[node name="ProfileListContainer" type="VBoxContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ListLabel" type="Label" parent="CenterContainer/MainPanel/ProfileListContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Choisir un profil :"
horizontal_alignment = 1

[node name="ProfileList" type="ItemList" parent="CenterContainer/MainPanel/ProfileListContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_font_sizes/font_size = 20

[node name="ButtonsContainer" type="VBoxContainer" parent="CenterContainer/MainPanel"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 15

[node name="CreateButton" type="Button" parent="CenterContainer/MainPanel/ButtonsContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "‚ûï Cr√©er un profil"

[node name="DeleteButton" type="Button" parent="CenterContainer/MainPanel/ButtonsContainer"]
custom_minimum_size = Vector2(400, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 22
disabled = true
text = "üóëÔ∏è Supprimer"

[node name="Spacer" type="Control" parent="CenterContainer/MainPanel/ButtonsContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/MainPanel/ButtonsContainer"]
custom_minimum_size = Vector2(400, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚Üê Retour"

[node name="CreatePopup" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="PopupBg" type="ColorRect" parent="CreatePopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.15, 0.17, 0.22, 1)

[node name="PopupContent" type="VBoxContainer" parent="CreatePopup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PopupTitle" type="Label" parent="CreatePopup/PopupContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Cr√©er un profil"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CreatePopup/PopupContent"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="NameLabel" type="Label" parent="CreatePopup/PopupContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Nom du profil :"

[node name="NameInput" type="LineEdit" parent="CreatePopup/PopupContent"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
placeholder_text = "Entrez un nom..."

[node name="PortraitLabel" type="Label" parent="CreatePopup/PopupContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Portrait :"

[node name="PortraitOption" type="OptionButton" parent="CreatePopup/PopupContent"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18

[node name="Spacer2" type="Control" parent="CreatePopup/PopupContent"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ButtonsRow" type="HBoxContainer" parent="CreatePopup/PopupContent"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CancelButton" type="Button" parent="CreatePopup/PopupContent/ButtonsRow"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚Üê Retour"

[node name="ValidateButton" type="Button" parent="CreatePopup/PopupContent/ButtonsRow"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚úì Valider"
